[gd_scene load_steps=20 format=3 uid="uid://xdwhfq5y2n8g"]

[ext_resource type="Script" path="res://main.gd" id="1_cjg7d"]
[ext_resource type="PackedScene" uid="uid://dey1ic1w02olt" path="res://player_1.tscn" id="1_v68n3"]
[ext_resource type="PackedScene" uid="uid://h28dv04eexva" path="res://environment.tscn" id="2_1cg03"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_ca32w"]
[ext_resource type="PackedScene" uid="uid://b6h585c6ocpbj" path="res://player_2.tscn" id="3_f5onw"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3D.gd" id="4_ylrc6"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/camera_3D_resource.gd" id="5_m3kef"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yj3uf"]
size = Vector3(50, 1, 50)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_usgy2"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kyg7g"]
invert = true
seamless = true
noise = SubResource("FastNoiseLite_usgy2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f21p6"]
vertex_color_use_as_albedo = true
albedo_color = Color(0, 0.286275, 0, 1)
albedo_texture = SubResource("NoiseTexture2D_kyg7g")

[sub_resource type="BoxMesh" id="BoxMesh_1eyye"]
material = SubResource("StandardMaterial3D_f21p6")
size = Vector3(50, 1, 50)

[sub_resource type="SphereShape3D" id="SphereShape3D_f5ia8"]

[sub_resource type="SphereMesh" id="SphereMesh_ghxvw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qs0bb"]
size = Vector3(10, 1, 10)

[sub_resource type="BoxMesh" id="BoxMesh_w53gu"]
size = Vector3(10, 1, 10)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ecr8a"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_epmja"]
height = 4.0
radius = 2.0

[sub_resource type="Resource" id="Resource_dlphn"]
script = ExtResource("5_m3kef")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
fov = 75.0

[node name="world" type="Node3D"]
script = ExtResource("1_cjg7d")

[node name="floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor"]
shape = SubResource("BoxShape3D_yj3uf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="floor"]
mesh = SubResource("BoxMesh_1eyye")

[node name="hill" type="StaticBody3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -5.05488, -1.38137, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="hill"]
shape = SubResource("SphereShape3D_f5ia8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="hill"]
mesh = SubResource("SphereMesh_ghxvw")

[node name="platform" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -8.894)

[node name="CollisionShape3D" type="CollisionShape3D" parent="platform"]
shape = SubResource("BoxShape3D_qs0bb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="platform"]
mesh = SubResource("BoxMesh_w53gu")

[node name="middle_mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ecr8a")

[node name="Area3D" type="Area3D" parent="middle_mesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="middle_mesh/Area3D"]
shape = SubResource("CylinderShape3D_epmja")

[node name="environment" parent="." instance=ExtResource("2_1cg03")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -1)

[node name="player1" parent="." instance=ExtResource("1_v68n3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0927341, 0, -1)

[node name="player2" parent="." instance=ExtResource("3_f5onw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.99999, 0.00207357, -0.00394037, 0.000845799, 0.780378, 0.625308, 0.00437162, -0.625305, 0.780368, -0.0763139, 4.75234, 5.9308)

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
script = ExtResource("2_ca32w")

[node name="PhantomCamera3D" type="Node3D" parent="."]
transform = Transform3D(0.99999, 0.00207357, -0.00394037, 0.000845799, 0.780378, 0.625308, 0.00437162, -0.625305, 0.780368, -0.0763139, 4.75234, 5.9308)
script = ExtResource("4_ylrc6")
priority_override = false
priority = 0
follow_mode = 3
follow_group = Array[NodePath]([NodePath("../player1"), NodePath("../player2")])
follow_parameters/auto_distance = true
follow_parameters/min_distance = 7.0
follow_parameters/max_distance = 10.0
follow_parameters/auto_distance_divisor = 10.0
follow_parameters/target_offset = Vector3(0, 0, 0)
follow_parameters/damping = false
look_at_mode = 0
tween_parameters = null
tween_on_load = false
inactive_update_mode = 0
camera_3D_resource = SubResource("Resource_dlphn")

[node name="BreakTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="GameOver" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -41.5
offset_right = 321.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "YOUR HORSE BROKE :("

[node name="BreakLabel" type="Label" parent="."]
visible = false
offset_left = 550.0
offset_top = 70.0
offset_right = 630.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 40

[connection signal="body_entered" from="middle_mesh/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_break_timer_timeout"]
